--- a/Google/index.html
+++ b/Google/index.html
@@ -22,12 +22,12 @@
   <body>
     <!--div container-->
   <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
 
 
     <!--Collect the nav links, forms, and other content for toggling -->
-    <div class="col-lg-12 text-right">
+    <div class="text-right">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Gmail</a></li>
         <li><a href="#">Images</a></li>
@@ -46,68 +46,69 @@
 
 
 <!--logo & searching bar-->
-<div class="jumbotron text-center">
-  <div class="col-sm-12 container logo_box">
-    <img class="logo" src="images/googlelogo.png" alt="logo"/><br />
-    <div class="logo_sub">New Zealand</div>
-      <form class="form-horizonal" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control"  style="color:#bbb" placeholder="Search Google or type URL">
-          <img class="mic" src="images/mic.png" />
-        </div>
-      </form>
-    </div>
-  </div>
+  <div class="jumbotron text-center">
+    <div class="container logo_box">
+      <img class="logo" src="images/googlelogo.png" alt="logo"/><br />
+      <div class="logo_sub">New Zealand</div>
+        <div class="serach_bar">
 
-  <!--div box 8-->
-  <div class="row">
-    <div class="visited container">
-      <div class="row row1 text-center">
-        <div class="col-xs-5 col-md-3">
-          <a href="#" class="thumbnail">
-            <img src="images/1_03.gif" alt="...">
-          </a>
         </div>
-        <div class="col-xs-5 col-md-3">
-          <a href="#" class="thumbnail">
-            <img src="images/1_05.gif" alt="...">
-          </a>
-        </div>
-        <div class="col-xs-5 col-md-3">
-          <a href="#" class="thumbnail">
-            <img src="images/1_07.gif" alt="...">
-          </a>
-        </div>
-        <div class="col-xs-5 col-md-3">
-          <a href="#" class="thumbnail">
-            <img src="images/1_09.gif" alt="...">
-          </a>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-xs-5 col-md-3 hidden-xs">
-          <a href="#" class="thumbnail">
-            <img src="images/1_15.gif" alt="...">
-          </a>
-        </div>
-        <div class="col-xs-5 col-md-3 hidden-xs">
-          <a href="#" class="thumbnail">
-            <img src="images/1_16.gif" alt="...">
-          </a>
-        </div>
-        <div class="col-xs-5 col-md-3 hidden-sm hidden-xs">
-          <a href="#" class="thumbnail">
-            <img src="images/1_17.gif" alt="...">
-          </a>
-        </div>
-        <div class="col-xs-5 col-md-3 hidden-sm hidden-xs">
-          <a href="#" class="thumbnail">
-            <img src="images/1_18.png" alt="...">
-          </a>
-        </div>
+        <form class="form-horizonal" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control"  style="color:#bbb" placeholder="Search Google or type URL">
+            <img class="mic" src="images/mic.png" />
+          </div>
+        </form>
       </div>
     </div>
-  </div>
+
+    <!--div box 8-->
+      <div class="container container8">
+        <div class="row visited row1 text-center">
+          <div class="col-xs-6 col-sm-4 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="images/1_03.gif" alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="images/1_05.gif" alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 hidden-xs">
+            <a href="#" class="thumbnail">
+              <img src="images/1_07.gif" alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 hidden-sm hidden-xs">
+            <a href="#" class="thumbnail">
+              <img src="images/1_09.gif" alt="...">
+            </a>
+          </div>
+        </div>
+        <div class="row row1 text-center">
+          <div class="col-xs-6 col-sm-4 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="images/1_15.gif" alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="images/1_16.gif" alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 hidden-xs">
+            <a href="#" class="thumbnail">
+              <img src="images/1_17.gif" alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 hidden-sm hidden-xs">
+            <a href="#" class="thumbnail">
+              <img src="images/1_18.png" alt="...">
+            </a>
+          </div>
+        </div>
+      </div>
 
 
 
