--- a/CV/boot.html
+++ b/CV/boot.html
@@ -35,7 +35,7 @@
              <div class="col-md-7 col-lg-8 vc-name nopadding">
                 <!-- Name-Position -->
                 <div class="row nopadding name">
-                   <div class="col-md-10 name-title"><h2 class="font-accident-two-light uppercase">Samuel Anderson</h2></div>
+                   <div class="col-md-10 name-title"><h2 class="uppercase">Samuel Anderson</h2></div>
                    <div class="col-md-2 nopadding name-pdf hidden-sm hidden-xs">
                       <a href="#"></a>
                    </div>
@@ -44,10 +44,10 @@
                    <div class="col-md-10 position-title">
 
                       <section class="cd-intro">
-                         <h4 class="cd-headline clip is-full-width font-accident-two-normal uppercase">
+                         <h4 class="uppercase">
                             <span>The experienced </span>
                             <span class="cd-words-wrapper">
-                               <b class="is-visible">UI/UX Designer</b>
+                               <b>UI/UX Designer</b>
                             </span>
                          </h4>
                       </section>
@@ -98,16 +98,14 @@
           <div class="m-details row nopadding bg-color01">
 
              <div class="col-md-8 nopadding">
-                <div class="padding-50 wow fadeInDown" data-wow-delay="0.2s" data-wow-offset="10">
+                <div class="padding-50">
                    <div class="row nopadding">
                       <div class="col-md-12 nopadding">
-                         <h3 class="font-accident-two-normal uppercase">About me</h3>
-                         <div class="quote">
-                            <h5 class="font-accident-one-bold uppercase subtitle">Hard-working person on the way to the success...</h5>
+                         <h3 class="uppercase">About me</h3>
+                         <div>
+                            <h5 class="uppercase subtitle">Hard-working person on the way to the success...</h5>
                             <div class="dividewhite1"></div>
-                            <!--<p class="small">-->
-                               <!--Customize your website as you want using different colors and 100% free fonts.-->
-                            <!--</p>-->
+
                             <div class="dividewhite2"></div>
                          </div>
                       </div>
@@ -118,8 +116,8 @@
                          <div class="row">
                             <div class="col-sm-1 col-md-3"><div class="dividewhite1"></div></div>
                             <div class="col-sm-11 col-md-9">
-                               <h5 class="font-accident-one-bold uppercase">Creative</h5>
-                               <p class="small">
+                               <h5 class="uppercase">Creative</h5>
+                               <p>
                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet hendrerit dolor, at lacinia mi.
                                </p>
                             </div>
@@ -128,10 +126,10 @@
                       </div>
                       <div class="col-md-4 infoblock nopadding">
                          <div class="row">
-                            <div class="col-sm-1 col-md-3"><i class="flaticon-stats47"></i><div class="dividewhite1"></div></div>
+                            <div class="col-sm-1 col-md-3"><div class="dividewhite1"></div></div>
                             <div class="col-sm-11 col-md-9">
-                               <h5 class="font-accident-one-bold uppercase">Motivated</h5>
-                               <p class="small">
+                               <h5 class="uppercase">Motivated</h5>
+                               <p>
                                   Curabitur sit amet laoreet leo. Maecenas eget pulvinar arcu. Quisque fermentum nulla non urna placerat.
                                </p>
                             </div>
@@ -140,10 +138,10 @@
                       </div>
                       <div class="col-md-4 infoblock nopadding">
                          <div class="row">
-                            <div class="col-sm-1 col-md-3"><i class="flaticon-clocks18"></i><div class="dividewhite1"></div></div>
+                            <div class="col-sm-1 col-md-3"><div class="dividewhite1"></div></div>
                             <div class="col-sm-11 col-md-9">
-                               <h5 class="font-accident-one-bold uppercase">Punctual</h5>
-                               <p class="small">
+                               <h5 class="uppercase">Punctual</h5>
+                               <p>
                                   Sed scelerisque elit eget eros consectetur varius. Suspendisse laoreet rhoncus pellentesque.
                                </p>
                             </div>
@@ -154,30 +152,30 @@
                 </div>
              </div>
 
-             <div class="col-md-4 personal nopadding ui-block-color01">
-                <div class="padding-50 wow fadeInRight" data-wow-delay="0.4s" data-wow-offset="10">
-                   <h3 class="font-accident-two-normal uppercase">Personal Info</h3>
+             <div class="col-md-4 personal nopadding bg-color02">
+                <div class="padding-50">
+                   <h3 class="uppercase">Personal Info</h3>
                    <div class="dividewhite3"></div>
                    <div>
                       <div class="fullwidth box">
-                         <div class="one"><p class="small uppercase">Name:</p></div>
-                         <div class="two"><p class="small">Samuel Anderson</p></div>
+                         <div class="one"><p class="uppercase">Name:</p></div>
+                         <div class="two"><p>Samuel Anderson</p></div>
                       </div>
                       <div class="fullwidth box">
-                         <div class="one"><p class="small uppercase text-nowrap">Date of Birth:</p></div>
-                         <div class="two"><p class="small">03/12/1980</p></div>
+                         <div class="one"><p class="uppercase">Date of Birth:</p></div>
+                         <div class="two"><p>03/12/1980</p></div>
                       </div>
                       <div class="fullwidth box">
-                         <div class="one"><p class="small uppercase">Address:</p></div>
-                         <div class="two"><p class="small">1234, Direct drive, Daytona Beach, Fl, USA</p></div>
+                         <div class="one"><p class="uppercase">Address:</p></div>
+                         <div class="two"><p>1234, Direct drive, Daytona Beach, Fl, USA</p></div>
                       </div>
                       <div class="fullwidth box">
-                         <div class="one"><p class="small uppercase">Phone:</p></div>
-                         <div class="two"><p class="small">1 234 567 89 10</p></div>
+                         <div class="one"><p class="uppercase">Phone:</p></div>
+                         <div class="two"><p>1 234 567 89 10</p></div>
                       </div>
                       <div class="fullwidth box">
-                         <div class="one"><p class="small uppercase">Email:</p></div>
-                         <div class="two"><p class="small">james@anderson.com</p></div>
+                         <div class="one"><p class="uppercase">Email:</p></div>
+                         <div class="two"><p>james@anderson.com</p></div>
                       </div>
                    </div>
                    <div class="dividewhite1"></div>
@@ -186,13 +184,13 @@
 
           </div>
 
-          <div class="row nopadding ui-block-color02">
+          <div class="row nopadding bg-color03">
              <div class="col-md-4 pro-experience nopadding">
-                <div class="padding-50 wow fadeInRight" data-wow-delay="0.6s" data-wow-offset="5">
-                   <h3 class="font-accident-two-normal uppercase">Pro. Experience</h3>
+                <div class="padding-50">
+                   <h3 class="uppercase">Pro. Experience</h3>
                    <div class="dividewhite4"></div>
                    <div class="experience">
-                      <ul class="">
+                      <ul>
                          <li class="date">02/2008 - 04/2010</li>
                          <li class="company uppercase">
                             <a>
@@ -201,7 +199,7 @@
                          </li>
                          <li class="position">Junior Designer</li>
                       </ul>
-                      <ul class="">
+                      <ul>
                          <li class="date">04/2010 - 06/2012</li>
                          <li class="company uppercase">
                             <a>
@@ -210,7 +208,7 @@
                          </li>
                          <li class="position">Senior Designer</li>
                       </ul>
-                      <ul class="">
+                      <ul>
                          <li class="date">06/2012 - present</li>
                          <li class="company uppercase">
                             <a>
@@ -225,41 +223,31 @@
                 </div>
              </div>
 
-             <div class="col-md-8 circle-skills nopadding ui-block-color03">
-                <div class="padding-50 wow fadeInLeft" data-wow-delay="0.6s" data-wow-offset="5">
-                   <h3 class="font-accident-two-normal uppercase">My Professional skills</h3>
+             <div class="col-md-8 nopadding bg-color04">
+                <div class="padding-50">
+                   <h3 class="uppercase">My Professional skills</h3>
                    <div class="dividewhite1"></div>
                    <div class="row">
                       <div class="col-sm-4 nopadding">
-                         <div class="progressbar" data-animate="false">
-                            <div class="circle font-accident-one-normal" data-percent="72.5">
-                               <div></div>
-                               <h4 class="font-accident-one-normal uppercase">Prototyping</h4>
-                               <p class="font-regular-normal">
+                               <h4 class="uppercase">Prototyping</h4>
+                               <p>
                                   A prototype is an early sample, model, or release of a product built to test ...
                                </p>
                                <a href="#!" class="btn btn-wh-trans btn-xs">Learn More</a>
-                            </div>
-                         </div>
                       </div>
                       <div class="col-sm-4 nopadding">
-                         <div class="progressbar" data-animate="false">
-                            <div class="circle font-accident-one-normal" data-percent="94.5">
-                               <div></div>
-                               <h4 class="font-accident-one-normal uppercase">Design</h4>
-                               <p class="font-regular-normal">
+                               <h4 class="uppercase">Design</h4>
+                               <p>
                                   Design is the creation of a plan or convention for the construction of an object ...
                                </p>
                                <a href="#!" class="btn btn-wh-trans btn-xs">Learn More</a>
-                            </div>
-                         </div>
+
                       </div>
                       <div class="col-sm-4 nopadding">
-                         <div class="progressbar" data-animate="false">
-                            <div class="circle font-accident-one-normal" data-percent="30.5">
-                               <div></div>
-                               <h4 class="font-accident-one-normal uppercase">Development</h4>
-                               <p class="font-regular-normal">
+                         <div>
+                            <div>
+                               <h4 class="uppercase">Development</h4>
+                               <p>
                                   Software development is the process of computer programming ...
                                </p>
                                <a href="#!" class="btn btn-wh-trans btn-xs">Learn More</a>
@@ -276,18 +264,18 @@
 
     </div>
 
-    <footer class="padding-50 ui-bg-color02">
+    <footer class="padding-50">
        <div class="container-fluid nopadding">
-          <div class="row wow fadeInDown" data-wow-delay=".2s" data-wow-offset="10">
+          <div class="row">
              <div class="col-md-3">
-                <h4 class="font-accident-two-normal uppercase">Samuel Anderson</h4>
+                <h4 class="uppercase">Samuel Anderson</h4>
                 <p class="inline-block">
                    Quality Web Design, Ui / UX Design. Part-time or Fulltime.
                 </p>
                 <div class="divider-dynamic"></div>
              </div>
              <div class="col-md-3 cv-link">
-                <h4 class="font-accident-two-normal uppercase">Download cv</h4>
+                <h4 class="uppercase">Download cv</h4>
                 <div class="dividewhite1"></div>
                 <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
                 <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>German</a>
@@ -295,7 +283,7 @@
                 <div class="divider-dynamic"></div>
              </div>
              <div class="col-md-3">
-                <h4 class="font-accident-two-normal uppercase">Newsletter</h4>
+                <h4 class="uppercase">Newsletter</h4>
                 <div class="dividewhite1"></div>
                 <input class="newsletter-email" type="email" required="" name="ne" placeholder="Your Email">
                 <!--<p>Lorem ipsum dolor sit amet...</p>-->
@@ -316,7 +304,7 @@
              </div>
           </div>
           <div class="dividewhite1"></div>
-          <div class="row wow fadeInDown" data-wow-delay=".4s" data-wow-offset="10">
+          <div class="row">
              <div class="col-md-12 copyrights">
                 <p>© 2016 Samuel Anderson.</p>
              </div>
