--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -24,17 +24,21 @@
     <script type="text/javascript">
         'use strict'
 
+        /* add number */
+
         function addChar(input, character) {
             if (input.value == null || input.value == "0")
                 input.value = character
             else
                 input.value += character
         }
+        /* delete character one by one from right */
 
         function deleteChar(input) {
             input.value = input.value.substring(0, input.value.length - 1)
         }
 
+        /* change sign + - */
         function changeSign(input) {
             if (input.value.substring(0, 1) == "-")
                 input.value = input.value.substring(1, input.value.length)
@@ -42,20 +46,17 @@
                 input.value = "-" + input.value
         }
 
+        /* cumpute */
         function compute(form) {
             form.display.value = eval(form.display.value)
         }
 
-        function square(form) {
-            form.display.value = eval(form.display.value) * eval(form.display.value)
-        }
-
+        /* check number */
         function checkNum(str) {
             for (var i = 0; i < str.length; i++) {
                 var ch = str.substring(i, i + 1)
                 if (ch < "0" || ch > "9") {
-                    if (ch != "/" && ch != "*" && ch != "+" && ch != "-" &&
-                        ch != "(" && ch != ")") {
+                    if (ch != "/" && ch != "*" && ch != "+" && ch != "-") {
                         alert("invalid entry!")
                         return false
                     }
@@ -63,6 +64,7 @@
             }
             return true
         }
+
     </script>
 
 
