--- a/calculator/cal.html
+++ b/calculator/cal.html
@@ -102,7 +102,7 @@
             <!--Screen-->
             <div class="row">
                 <div class="col-xs-12">
-                    <input class="screenInput" type="text" name="screen" style="width:100%" readonly/>
+                    <input class="screenInput" type="text" name="screen" value="0" style="width:100%" readonly/>
                 </div>
             </div>
 
